@@ -1,7 +1,9 @@
 package SDhulb;
 
+import java.util.Arrays;
+
 public class SDhulb { /*Built not to handle: non UTF-8 source files  */
-    static String vStr = "0.0.0.2"; /*Rightmost: incremented every commit. Second from right: incremented upon feature implementation. Second from left: incremented upon implementation of a set of related features. Leftmost: incremented every breaking change. NO NUMBERS INCREMENTED FROM COMMITS CONSISTING OF COMMENTS EXCLUSIVELY */
+    static String vStr = "0.0.0.3"; /*Rightmost: incremented every commit. Second from right: incremented upon feature implementation. Second from left: incremented upon implementation of a set of related features. Leftmost: incremented every breaking change. NO NUMBERS INCREMENTED FROM COMMITS CONSISTING OF COMMENTS EXCLUSIVELY */
     public static boolean wasErr = false;
     public static String errMsg = null;
     public static void main(String[] args) {
@@ -46,5 +48,6 @@ public class SDhulb { /*Built not to handle: non UTF-8 source files  */
             return;
         }
         Fmt.printOk("SOURCE: " + args[0] + " DESTINATION: " + args[1]);
+        System.out.println(Arrays.toString(SourceParser.parse(args[0]).toArray()));
     }
 }
