@@ -1,5 +1,5 @@
 package SDhulb;
 
 public enum TokenType {
-    Keyword,Literal,Symbol,Operator,Name,Type,Asm,Comment;
+    Keyword,Literal,Symbol,Operator,Name,Type,TextAsm,DataAsm,Comment;
 }
